<resources>
    <string name="app_name">箫语</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_resources">干货</string>
    <string name="action_messages">杂谈</string>
    <string name="action_topic">话题</string>
    <string name="action_made">箫制作</string>
    <string name="action_about">关于</string>
    <string name="action_my">我的</string>

    <string name="synthesis_fragment">杂谈</string>
</resources>
