<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_messages" />
        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_resources" />
        <item
            android:id="@+id/nav_topic"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_topic" />
        <item
            android:id="@+id/nav_made"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_made" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_about" />
            <item
                android:id="@+id/nav_my"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_my" />
        </menu>
    </item>

</menu>
